@@ -49,6 +49,14 @@ our %S = (%S,
     fan  => [ 8, 'orig' ],
     orig => [ 9, 'fan'  ],
   },
+  prod_relations  => {
+    'old' => [ 0, 'new' ],
+    'new' => [ 1, 'old' ],
+    'par' => [ 2, 'sub' ],
+    'sub' => [ 3, 'par' ],
+    'imp' => [ 4, 'ipa' ],
+    'ipa' => [ 5, 'imp' ],
+  },
   age_ratings     => {
     -1 => [ 'Unknown' ],
     0  => [ 'All ages' ,'CERO A' ],
